--- a/backend/rust-backend/Cargo.toml
+++ b/backend/rust-backend/Cargo.toml
@@ -6,5 +6,14 @@ edition = "2021"
 [dependencies]
 axum = "0.7.7"
 dotenv = "0.15.0"
+futures-util = "0.3.31"
+hmac = "0.12.1"
 hyper = "1.5.0"
+jsonwebtoken = "9.3.0"
+jwt = "0.16.0"
+postgres = "0.19.9"
+serde = "1.0.213"
+serde_json = "1.0.132"
+sha2 = "0.10.8"
 tokio = {version ="1.41.0",features = ["full"]}
+tower = "0.5.1"
