feat(passwords): init passowrd protection

--- a/backend/rust-backend/.env.example
+++ b/backend/rust-backend/.env.example
@@ -3,7 +3,13 @@ HOST=0.0.0.0
 JWT_KEY=''
 JWT_ALGORITHM=''
 
+SALTING_TEXT=''
+DEFAULT_USERNAME=''
+DEFAULT_EMAIL=''
+DEFAULT_PASSWORD=''
+
 PSQL_USER=''
 PSQL_PASS=''
 PSQL_HOST=''
 PSQL_PORT=''
+PSQL_NAME=''
