--- a/backend/rust-backend/Cargo.toml
+++ b/backend/rust-backend/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.7"
+diesel = { version = "2.2.4", features = ["postgres"] }
 dotenv = "0.15.0"
 futures-util = "0.3.31"
 hmac = "0.12.1"
