feat(Docker compose): full app docker

--- a/backend/rust-backend/.env.example
+++ b/backend/rust-backend/.env.example
@@ -8,8 +8,9 @@ DEFAULT_USERNAME=''
 DEFAULT_EMAIL=''
 DEFAULT_PASSWORD=''
 
-PSQL_USER=''
-PSQL_PASS=''
-PSQL_HOST=''
-PSQL_PORT=''
-PSQL_NAME=''
+POSTGRES_USER=''
+POSTGRES_PASSWORD=''
+PSQL_HOST='database'
+PSQL_PORT='5432'
+POSTGRES_DB=''
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${PSQL_HOST}/${POSTGRES_DB}
