--- a/backend/rust-backend/Cargo.toml
+++ b/backend/rust-backend/Cargo.toml
@@ -19,3 +19,5 @@ serde_json = "1.0.132"
 sha2 = "0.10.8"
 tokio = {version ="1.41.0",features = ["full"]}
 tower = "0.5.1"
+utoipa ={version = "5.1.3",features = ["axum_extras"]} 
+utoipa-swagger-ui = {version = "8.0.3", features=["axum"]}
