--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ x-env: &env
     - POSTGRES_USER=${POSTGRES_USER}
     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     - POSTGRES_DB=${POSTGRES_DB}
+  networks:
+    akm:
 
 services:
   akm-website:
@@ -58,3 +60,6 @@ services:
 
 volumes:
   postgres_volume:
+
+networks:
+  akm:
