--- a/backend/rust-backend/Dockerfile.prebuilt
+++ b/backend/rust-backend/Dockerfile.prebuilt
@@ -5,6 +5,7 @@ RUN cargo install diesel_cli --no-default-features --features postgres
 WORKDIR /usr/src/akm_rust
 COPY release/rust-backend .
 COPY .env .
+COPY diesel_migrations.sh .
 RUN chown -R akm_rust_user .
 RUN chmod 600 .env
 
