--- a/backend/rust-backend/Dockerfile.prebuilt
+++ b/backend/rust-backend/Dockerfile.prebuilt
@@ -6,6 +6,8 @@ WORKDIR /usr/src/akm_rust
 COPY release/rust-backend .
 COPY .env .
 COPY diesel_migrations.sh .
+COPY Cargo.toml .
+COPY diesel.toml .
 RUN chown -R akm_rust_user .
 RUN chmod 600 .env
 
